# docs/swagger.json
@@ -108,6 +108,47 @@
                     }
                 }
             }
+        },
+        "/v1/deals/{id}": {
+            "put": {
+                "description": "Updates an existing deal in Pipedrive",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "deals"
+                ],
+                "summary": "Update an existing deal",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Deal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Deal data to update. Optional fields can be omitted.",
+                        "name": "deal",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.UpdateDealRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.UpdateDealResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -303,6 +344,19 @@
                         "$ref": "#/definitions/api.Deal"
                     }
                 },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "api.UpdateDealRequest": {
+            "type": "object"
+        },
+        "api.UpdateDealResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
                 "success": {
                     "type": "boolean",
                     "example": true
